<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr5_quest_teleop</name>
  <version>0.1.0</version>
  <description>
    Quest2ROS controller teleoperation for the Fairino FR5 cobot. Subscribes to
    the Quest app's controller pose/inputs (via ROS-TCP-Endpoint), maps them with
    clutch-based delta-Cartesian control + IK, and drives the FR5 over ServoJ
    (Fairino SDK). Publishes /joint_states for RViz2.
  </description>
  <maintainer email="awone.colab1@gmail.com">vaatsav</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>quest2ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
